<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>


    <string name="Dark_Mode">Темная тема</string>
    <string name="Share">Поделиться приложением</string>
    <string name="Support">Написать в поддержку</string>
    <string name="user_Argeement">Пользовательское соглашение</string>
    <string name="ShareAppText">Привет! Попробуй это приложение:\nhttps://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="SupportTextHeader">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="SupportTextBody">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="Offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="practicum_support_mail">praktikum@support.yandex.ru</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="bad_connection">Проблема со связью</string>
    <string name="load_failed">Загрузка не удалась. Проверьте подключерние к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="create_playlist">Создать</string>
    <string name="save_edited_playlist">Сохранить</string>
    <string name="edit_playlist">Редактировать</string>

    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_are_empty">Вы не создали\n ни одного плейлиста</string>
    <string name="playlist_is_empty">Вы не добавили ни одного трека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlistTracklist">Список треков</string>
    <string name="create_playlist_dialog_hint">Плейлист уже существует. Создать копию?</string>
    <string name="is_playlistfinished_dialog_hint">Завершить создание плейлиста?</string>
    <string name="data_will_be_lost_hint">Все несохраненные данные будут потеряны</string>
    <string name="delete_track_from_playlist">Удалить трек</string>
    <string name="check_deletion_intent">Вы уверены, что хотите удалить трек из\nплейлиста?</string>

    <string name="delete_playlist">Удалить плейлист</string>
    <string name="check_playlist_deletion_intent">Хотите удалить плейлист?</string>
    <string name="nothing_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>


    <string name="finish_editing">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="confirm_deletion">Удалить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>


    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="search_hint">Поиск</string>



</resources>