<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/InnerActivityLayoutStyle"
    tools:context=".settings.ui.SettingsFragment">

    <Toolbar
        style="@style/ToolBarStyle"
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/settings"
        android:titleTextAppearance="@style/ToolbarHeader"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <FrameLayout style="@style/SettingsActivityButtonFrame">

            <TextView style="@style/SettingsActivityButtonText"
                android:text="@string/Dark_Mode"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/themeSwither"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:thumbTint="@color/yp_blue"
                app:trackTint="@color/yp_blue_light"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </FrameLayout>

        <FrameLayout style="@style/SettingsActivityButtonFrame"
            android:id="@+id/buttonSettingsShare">


            <TextView style="@style/SettingsActivityButtonText"
                android:text="@string/Share"/>

            <ImageView style="@style/SettingsActivityButton"
                android:layout_gravity="end"
                android:src="@drawable/share_light_mode"
                app:iconGravity="textStart"
                android:clickable="true"/>

        </FrameLayout>

        <FrameLayout style="@style/SettingsActivityButtonFrame">

            <TextView style="@style/SettingsActivityButtonText"
                android:text="@string/Support"/>

            <ImageView style="@style/SettingsActivityButton"
                android:id="@+id/buttonSettingsSupport"
                android:layout_gravity="end"
                android:src="@drawable/light_mode_support"
                app:iconGravity="textStart"/>

        </FrameLayout>

        <FrameLayout style="@style/SettingsActivityButtonFrame">

            <TextView style="@style/SettingsActivityButtonText"
                android:text="@string/user_Argeement"/>

            <ImageView style="@style/SettingsActivityButton"
                android:id="@+id/buttonSettingsUserAgreement"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:src="@drawable/track_arrow_forward"
                app:iconGravity="textStart"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>