<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".medialibrary.ui.playlists_fragment.CreatePlayListsFragment">

    <Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/vector_arrow_back"
        android:title="@string/edit_playlist"
        android:titleTextAppearance="@style/ToolbarHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/padding_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/padding_16" />

    <ImageView
        android:id="@+id/imagepickArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding_24"
        android:layout_marginVertical="@dimen/padding_26"
        android:clickable="true"
        android:src="@drawable/image_picker"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameInputLayout"
        style="@style/CreatePlaylistInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/new_playlist_name"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        app:boxStrokeWidthFocused="@dimen/padding_1"
        app:cursorColor="@color/yp_blue"
        app:hintTextColor="@color/yp_blue"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/imagepickArea">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingHorizontal="@dimen/padding_16"
            android:shadowColor="@color/yp_blue"
            android:singleLine="true"
            android:textSelectHandle="@color/yp_blue"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescriptionInputLayout"
        style="@style/CreatePlaylistInputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:hint="@string/new_playlist_description"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:singleLine="true"
        app:boxStrokeWidthFocused="@dimen/padding_1"
        app:cursorColor="@color/yp_blue"
        app:hintTextColor="@color/yp_blue"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/playlistNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionInputEditText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:paddingHorizontal="@dimen/padding_16"
            android:shadowColor="@color/yp_blue"
            android:singleLine="true"
            android:textSelectHandle="@color/yp_blue"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createPlayListButton"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="@dimen/padding_32"
        android:background="@drawable/create_playlist_button_selector"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/save_edited_playlist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder" />

    <androidx.cardview.widget.CardView
        android:id="@+id/notificationDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/exitdialogshape"
        android:elevation="@dimen/padding_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/endEditingtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/text_size_16sp"
                android:paddingHorizontal="@dimen/padding_16"
                android:text="@string/is_playlistfinished_dialog_hint"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dataWillBeLosttv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_8"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/text_size_16sp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding_16"
                android:text="@string/data_will_be_lost_hint"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/endEditingtv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/endCreatingButton"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_marginHorizontal="@dimen/padding_8"
                android:layout_marginVertical="@dimen/padding_16"
                android:background="@drawable/create_playlist_button_inactive"
                android:elevation="@dimen/padding_8"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/finish_editing"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintTop_toBottomOf="@id/dataWillBeLosttv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginHorizontal="@dimen/padding_16"
                android:layout_marginVertical="@dimen/padding_16"
                android:background="@drawable/create_playlist_button"
                android:elevation="@dimen/padding_8"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dataWillBeLosttv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>