<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <FrameLayout
            android:layout_width="304dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="52dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="100dp"
            android:layout_gravity="start"
            android:textSize="@dimen/primary_text_size"
            android:text="@string/settings"
            android:textColor="@color/black"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="0dp"
            android:backgroundTint="#ffffff"
            android:layout_gravity="start"
            app:icon="@drawable/vector_arrow_back"
            app:iconTint="@color/black"
            app:iconGravity="textStart"/>


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:paddingLeft="16dp"
            android:paddingTop="21dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Dark_Mode"
                android:textColor="@color/black"
                android:textSize="@dimen/element_text_size" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:paddingLeft="16dp"
            android:paddingTop="21dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Share"
                android:textColor="@color/black"
                android:textSize="@dimen/element_text_size" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:backgroundTint="#ffffff"
                app:icon="@drawable/share_light_mode"
                app:iconGravity="textStart"
                app:iconTint="@color/grey" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:paddingLeft="16dp"
            android:paddingTop="21dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/Support"
                android:textColor="@color/black"
                android:textSize="@dimen/element_text_size" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:backgroundTint="#ffffff"
                app:icon="@drawable/light_mode_support"
                app:iconGravity="textStart"
                app:iconTint="@color/grey" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:paddingLeft="16dp"
            android:paddingTop="21dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/user_Argeement"
                android:textColor="@color/black"
                android:textSize="@dimen/element_text_size" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:backgroundTint="#ffffff"
                app:icon="@drawable/vector_arrow_forward"
                app:iconGravity="textStart"
                app:iconTint="@color/grey" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>